--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-Hello World
+<!DOCTYPE html>
+<html>
+    <head>
+        <link rel="stylesheet" href="styles.css">
+        <meta type="UTF-8">
+        <title>Project</title>
+    </head>
+    <body>
+        <h1>Teste</h1>
+    </body>
+    <footer>
+
+    </footer>
+</html>
